added link to github repository

--- a/evolution_compositionality_under_noise.ipynb
+++ b/evolution_compositionality_under_noise.ipynb
@@ -277,8 +277,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-14T15:05:12.399449Z",
-     "start_time": "2019-10-14T15:05:12.395721Z"
+     "end_time": "2019-12-12T19:38:39.055426Z",
+     "start_time": "2019-12-12T19:38:39.051506Z"
     }
    },
    "outputs": [],
@@ -316,8 +316,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-14T15:05:12.553951Z",
-     "start_time": "2019-10-14T15:05:12.543828Z"
+     "end_time": "2019-12-12T19:38:39.196953Z",
+     "start_time": "2019-12-12T19:38:39.184205Z"
     }
    },
    "outputs": [],
@@ -426,8 +426,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-14T15:05:12.558012Z",
-     "start_time": "2019-10-14T15:05:12.555555Z"
+     "end_time": "2019-12-12T19:38:39.201665Z",
+     "start_time": "2019-12-12T19:38:39.198888Z"
     }
    },
    "outputs": [
@@ -455,8 +455,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-14T15:05:12.567429Z",
-     "start_time": "2019-10-14T15:05:12.559504Z"
+     "end_time": "2019-12-12T19:38:39.210592Z",
+     "start_time": "2019-12-12T19:38:39.203630Z"
     }
    },
    "outputs": [
@@ -550,8 +550,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-14T15:05:12.693017Z",
-     "start_time": "2019-10-14T15:05:12.688299Z"
+     "end_time": "2019-12-12T19:38:39.326991Z",
+     "start_time": "2019-12-12T19:38:39.321891Z"
     },
     "code_folding": []
    },
@@ -613,8 +613,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-14T15:05:13.035632Z",
-     "start_time": "2019-10-14T15:05:13.025417Z"
+     "end_time": "2019-12-12T19:38:39.586431Z",
+     "start_time": "2019-12-12T19:38:39.575267Z"
     }
    },
    "outputs": [],
@@ -730,8 +730,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-14T15:05:13.164938Z",
-     "start_time": "2019-10-14T15:05:13.161154Z"
+     "end_time": "2019-12-12T19:38:39.699984Z",
+     "start_time": "2019-12-12T19:38:39.695945Z"
     },
     "code_folding": []
    },
@@ -776,8 +776,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-14T15:05:13.307669Z",
-     "start_time": "2019-10-14T15:05:13.298240Z"
+     "end_time": "2019-12-12T19:38:39.833128Z",
+     "start_time": "2019-12-12T19:38:39.819270Z"
     }
    },
    "outputs": [
@@ -808,8 +808,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-14T15:05:13.435502Z",
-     "start_time": "2019-10-14T15:05:13.432031Z"
+     "end_time": "2019-12-12T19:38:39.948312Z",
+     "start_time": "2019-12-12T19:38:39.944742Z"
     }
    },
    "outputs": [],
@@ -847,8 +847,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-14T15:05:13.574827Z",
-     "start_time": "2019-10-14T15:05:13.571493Z"
+     "end_time": "2019-12-12T19:38:40.075486Z",
+     "start_time": "2019-12-12T19:38:40.072338Z"
     }
    },
    "outputs": [
@@ -923,11 +923,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-20T15:13:14.501584Z",
-     "start_time": "2019-09-20T15:13:14.497442Z"
+     "end_time": "2019-12-12T19:38:40.318150Z",
+     "start_time": "2019-12-12T19:38:40.313799Z"
     }
    },
    "outputs": [
@@ -967,11 +967,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-20T15:13:14.705894Z",
-     "start_time": "2019-09-20T15:13:14.700400Z"
+     "end_time": "2019-12-12T19:38:40.431240Z",
+     "start_time": "2019-12-12T19:38:40.427605Z"
     }
    },
    "outputs": [
@@ -1004,11 +1004,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-20T15:13:14.913139Z",
-     "start_time": "2019-09-20T15:13:14.909370Z"
+     "end_time": "2019-12-12T19:38:40.544470Z",
+     "start_time": "2019-12-12T19:38:40.541057Z"
     }
    },
    "outputs": [
@@ -1025,7 +1025,7 @@
        "2.25"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,11 +1051,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-20T15:13:15.099265Z",
-     "start_time": "2019-09-20T15:13:15.095335Z"
+     "end_time": "2019-12-12T19:38:40.659165Z",
+     "start_time": "2019-12-12T19:38:40.655398Z"
     }
    },
    "outputs": [
@@ -1095,11 +1095,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-20T15:13:15.294424Z",
-     "start_time": "2019-09-20T15:13:15.290550Z"
+     "end_time": "2019-12-12T19:38:40.772117Z",
+     "start_time": "2019-12-12T19:38:40.768112Z"
     }
    },
    "outputs": [
@@ -1146,11 +1146,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-20T15:13:15.832894Z",
-     "start_time": "2019-09-20T15:13:15.829393Z"
+     "end_time": "2019-12-12T19:38:41.097370Z",
+     "start_time": "2019-12-12T19:38:41.094017Z"
     }
    },
    "outputs": [],
@@ -1185,11 +1185,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-20T15:13:16.029745Z",
-     "start_time": "2019-09-20T15:13:16.027079Z"
+     "end_time": "2019-12-12T19:38:41.205117Z",
+     "start_time": "2019-12-12T19:38:41.202183Z"
     }
    },
    "outputs": [
@@ -1217,11 +1217,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-20T15:13:16.200343Z",
-     "start_time": "2019-09-20T15:13:16.197165Z"
+     "end_time": "2019-12-12T19:38:41.315910Z",
+     "start_time": "2019-12-12T19:38:41.313011Z"
     }
    },
    "outputs": [],
@@ -1251,11 +1251,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-20T15:13:16.389765Z",
-     "start_time": "2019-09-20T15:13:16.386892Z"
+     "end_time": "2019-12-12T19:38:41.425797Z",
+     "start_time": "2019-12-12T19:38:41.422920Z"
     }
    },
    "outputs": [
@@ -1285,11 +1285,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-20T15:13:16.553439Z",
-     "start_time": "2019-09-20T15:13:16.545856Z"
+     "end_time": "2019-12-12T19:38:41.546271Z",
+     "start_time": "2019-12-12T19:38:41.535751Z"
     }
    },
    "outputs": [],
@@ -1339,11 +1339,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-20T15:13:16.776428Z",
-     "start_time": "2019-09-20T15:13:16.773275Z"
+     "end_time": "2019-12-12T19:38:41.698941Z",
+     "start_time": "2019-12-12T19:38:41.695753Z"
     }
    },
    "outputs": [
@@ -1375,11 +1375,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-20T15:13:16.957484Z",
-     "start_time": "2019-09-20T15:13:16.945027Z"
+     "end_time": "2019-12-12T19:38:41.823455Z",
+     "start_time": "2019-12-12T19:38:41.813190Z"
     }
    },
    "outputs": [],
@@ -1463,11 +1463,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-20T15:13:17.153991Z",
-     "start_time": "2019-09-20T15:13:17.147956Z"
+     "end_time": "2019-12-12T19:38:41.932851Z",
+     "start_time": "2019-12-12T19:38:41.926985Z"
     }
    },
    "outputs": [
@@ -1484,22 +1484,22 @@
       "i is:\n",
       "1\n",
       "response is:\n",
-      "12\n",
+      "02\n",
       "\n",
       "i is:\n",
       "2\n",
       "response is:\n",
-      "12\n",
+      "??\n",
       "\n",
       "i is:\n",
       "3\n",
       "response is:\n",
-      "02\n",
+      "??\n",
       "\n",
       "i is:\n",
       "4\n",
       "response is:\n",
-      "02\n"
+      "12\n"
      ]
     }
    ],
@@ -1525,7 +1525,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## For the rest of the code, see evolution_compositionality_under_noise.py (i.e. the python file)"
+    "## For the rest of the code, see evolution_compositionality_under_noise.py (i.e. the python file)\n",
+    "\n",
+    "Which can be found in the following GitHub repository:\n",
+    "https://github.com/marieke-woensdregt/repair_compositionality"
    ]
   },
   {
@@ -1553,7 +1556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
