added nuance to optimization thoughts

--- a/repair_vs_redundancy.ipynb
+++ b/repair_vs_redundancy.ipynb
@@ -97,11 +97,53 @@
     "\n",
     "In order to still make it possible for iterated learning chains to transition from a language that uses forms of length 2 into a language that uses forms of length 4 and vice versa, we need to then also allow for languages that use a mixture of form lengths (e.g. three forms of length 2, and one form of length 4). This yields the following number of possible languages:\n",
     "\n",
-    "$$ (2^2+2^4)^4 = 160000$$\n",
+    "$$ (2^2+2^4)^4 = 160000$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-01-10T16:00:59.228654Z",
+     "start_time": "2020-01-10T16:00:59.224145Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "160000\n",
+      "65792\n",
+      "2.431906614785992\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Alternatively, if we allow only for languages that use \n",
+    "# either only forms of length 2, or only forms of length 4,\n",
+    "# we end up with the following total number of languages:\n",
     "\n",
+    "n_langs_mix = (2**2 + 2**4)**4\n",
+    "print(n_langs_mix)\n",
+    "n_langs_no_mix = ((2**2)**4)+((2**4)**4)\n",
+    "print(n_langs_no_mix)\n",
+    "print(n_langs_mix/n_langs_no_mix)\n",
+    "\n",
+    "# which would make the hypothesis space nearly 2.5 times smaller.\n",
+    "# The problem with this however is that it really is hard to see\n",
+    "# how populations would transition from having a language that uses\n",
+    "# forms of length 2 to a language that uses forms of length 4."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "which means that compared to the Kirby et al. (2015) model (where there were ($(2^2)^4 = 256$ possible languages), the hypothesis space expands by a factor of 625. That is not ideal, because if we assume that simulation run times increase linearly with the size of the hypothesis space, a simulation that took 1 hour to run in our previous model would now take almost 4 weeks to run.\n",
     "\n",
-    "However, this linear relationship between the simulation run times and the size of the hypothesis space holds when during learning, we actually loop through each hypothesis and update its posterior probability based on the data. There are a couple of ways in which this process can be optimised:\n",
+    "However, this linear relationship between the simulation run times and the size of the hypothesis space holds (presumably) when during learning, we actually loop through each hypothesis and update its posterior probability based on the data. There are a couple of ways in which this process can be optimised:\n",
     "\n",
     "1. **memoisation**: This would require enumerating all possible data points (i.e. <meaning, form> pairs) (including all possible noisy forms), and for each of them calculating its likelihood for all possible hypotheses **once**, and caching the result. Whenever the same <meaning, form> pair is then encountered by any learner, the corresponding likelihood vector is then simply retrieved from memory and multiplied with the learner's current posterior. This should be doable given that the total number of meanings is 4, and the total number of forms (including all possible noisy variants, assuming that noise is restricted to a single character) is 56; which makes 4\\*56 = 224 possible <meaning, form> pairs. For each of those 224 possible datapoints, we would then calculate its likelihood for all 160,000 hypotheses, and cache these values in a 224\\*160,000 matrix. (That matrix thus has 224\\*160,000 = 35,840,000 entries.)\n",
     "2. Intergenerational learning could be sped up by representing data as simple counts of <meaning, form> pairs, and simply updating the posterior probability distribution for the full data set in one step, by multiplying the prior of the hypothesis with the likelihood of the <meaning, form> pair to the power of the number of times it occurs in the data set. This should speed things up a little in intergenerational learning, but won't make a difference in *intra*generational learning, because there we assume that the hearer updates their posterior in each interaction. \n",
