made section heading more specific

--- a/repair_vs_redundancy.ipynb
+++ b/repair_vs_redundancy.ipynb
@@ -344,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now let's calculate the actual compressibility in terms of coding length, given the strings in minimally redundant form specified above:"
+    "### Now let's calculate the actual compressibility in terms of coding length, given the strings in minimally redundant form specified above, starting with languages that only make use of forms of length 2, as in Kirby et al. (2015):"
    ]
   },
   {
@@ -863,7 +863,7 @@
    "source": [
     "## Conclusion about how to represent languages:\n",
     "\n",
-    "Based on all the above, I'd say let's go for possibility 1 of allowing for different form lengths. That keeps our way of representing languages as close as possibility to the one used by Kirby et al. (2015); it allows us to straightforwardly calculate the coding lengths; and it will not cause languages to make use of a different number of characters, as possibility 2 would."
+    "Based on all the above, I'd say let's go for possibility 1 of allowing for different form lengths. That keeps our way of representing languages as close as possible to the one used by Kirby et al. (2015); it allows us to straightforwardly calculate the coding lengths; and it will not cause languages to make use of a different number of characters, as possibility 2 would."
    ]
   },
   {
