added thoughts on when to classify a language as compositional

--- a/repair_vs_redundancy.ipynb
+++ b/repair_vs_redundancy.ipynb
@@ -861,6 +861,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## How to classify languages when a mixture of form lengths is allowed:\n",
+    "\n",
+    "The definitions of degenerate and holistic languages remain the same here: \n",
+    "- a degenerate language is a language that uses the same form for each meaning\n",
+    "- a holistic language is a language that uses a unique form for each meaning, but that is *not* compositional\n",
+    "\n",
+    "The tricky one to define is what counts as a compositional language. The part of the definition that remains the same as when only one form length is allowed that is equal to the number of meaning features (i.e. $l$ = $f$), is that each substring has to map uniquely onto each meaning feature. That is, a fully compositional system must satisfy:\n",
+    "\n",
+    "$$ \\forall f \\in F \\; \\exists s_{ij} \\; \\text{such that} \\; p(f | s_{ij}) = 1 \\land p(s_{ij} | f) = 1$$ \n",
+    "\n",
+    "(definition from Matt Spike's thesis, section 5.2.3)\n",
+    "However, when languages are allowed to use forms that are longer than the number of meaning features (i.e. $l$ can be either $f$ or $2*f$), it becomes trickier to define the length of a substring. As mentioned above, there are two ways in which reduplication can be used in a compositional system. Either individual substrings are reduplicated, resulting in a language like [aaaa, aabb, bbaa, bbbb], or full signals can be reduplicated, resulting in a language like [aaaa, abab, baba, bbbb]. \n",
+    "1. If we know that a given language uses the the \"reduplicate each segment\" strategy, we can check that it is compositional by dividing each form into a number of chunks that corresponds to the number of meaning features (such that if forms have length 6 and there are 2 meaning features, we get 2 chunks of length 3), and subsequently checking that each of those chunks maps uniquely onto a given meaning feature, according to the rule stated in Equation 2 above. \n",
+    "2. In contrast, if we know that a given language uses the \"reduplicat full signal\" strategy, we can check that it is compositional by dividing it up into chunks that each have a length corresponding to the number of meaning features (such that if forms have length 6 and there are 2 meaning features, we get 3 chunks of length 2), and subsequently checking that *within* the first such chunk of each form, we see that each substring *within* the chunk maps uniquely onto a given meaning feature, according to the rule stated in Equation 2 above. \n",
+    "\n",
+    "That part of the definition of what counts as a compositional language is still quite straightforward. However, there are two more tricky types of languages that could also potentially be classed as compositional:\n",
+    "3. A language that uses forms of $l = 2*f$, *doesn't* use reduplication, but still has a compositional mapping from substrings to meaning features *if* you take a substring to have length $f$. For example: [aaba, aabb, baba, babb]. However, the question there is how a listener would know that that is the appropriate substring length to base their interpretation on. With the languages that use reduplication this induction process is more straightforward: first one can determine that the language uses either one or the other form of reduplication, and then based on that, one can determine whether the language is compositional. Should we assume that if all forms in the language consistently have length $l = 2*f$, but the language doesn't use either form of reduplication, we must then analyse it as substrings having length $l / f$? I.e. the longest possible substrings? \n",
+    "4. Another language type that is tricky to analyse are languages that use a mixture of form lengths. The richest possible listener model would be to assume that the listener can decide whether to do repair on a form-by-form basis, and that a language could therefore use a mixture of reduplication and repair strategies. Such a language could look like this: [aaaa, abab, ba, bb], where we could still unambiguously identify that two of the forms use the \"reduplicate whole signal\" strategy, whereas the other two forms should be combined with repair. However, this means that the corresponding rewrite rules would no longer look like those of a compositional language. Instead, the most concise way this particular example language could be captured in rewrite rules would look like the grammar of a *holistic* language: \n",
+    "*Rewrite rules:*\n",
+    "\n",
+    "S:02 --> aaaa\n",
+    "\n",
+    "S:03 --> abab\n",
+    "\n",
+    "S:12 --> ba\n",
+    "\n",
+    "S:13 --> bb\n",
+    "\n",
+    "\n",
+    "*Minimally redundant form:*\n",
+    "\n",
+    "S02aaaa.S03abab.S12ba.S13bb\n",
+    "\n",
+    "\n",
+    "In sum, I think we can conclude that languages of types 1, 2 and 3 should be classed as compositional, whereas languages of type 4 should not."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Conclusion about how to represent languages:\n",
     "\n",
     "Based on all the above, I'd say let's go for possibility 1 of allowing for different form lengths. That keeps our way of representing languages as close as possible to the one used by Kirby et al. (2015); it allows us to straightforwardly calculate the coding lengths; and it will not cause languages to make use of a different number of characters, as possibility 2 would."
@@ -893,8 +934,17 @@
     "\n",
     "Burkett, D., & Griffiths, T. L. (2010). Iterated learning of multiple languages from multiple teachers. The Evolution of Language: Proceedings of the 8th International Conference (EVOLANG8), Utrecht, Netherlands, 14-17 April 2010, 58–65.\n",
     "\n",
-    "Kirby, S., Tamariz, M., Cornish, H., & Smith, K. (2015). Compression and communication in the cultural evolution of linguistic structure. Cognition, 141, 87–102. https://doi.org/10.1016/j.cognition.2015.03.016"
+    "Kirby, S., Tamariz, M., Cornish, H., & Smith, K. (2015). Compression and communication in the cultural evolution of linguistic structure. Cognition, 141, 87–102. https://doi.org/10.1016/j.cognition.2015.03.016\n",
+    "\n",
+    "Spike, M. (2017). Thesis: Minimal requirements for the cultural evolution of language."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
