started working out minimal effort pressure

--- a/repair_vs_redundancy.ipynb
+++ b/repair_vs_redundancy.ipynb
@@ -914,8 +914,31 @@
     "## How to implement minimal effort pressure:\n",
     "\n",
     "As I see it, we assume that this pressure plays a role in the process of communication. If we define effort as shared utterance length between speaker and listener, the way to minimise this effort would be for the speaker to probabilistically choose signals that are shorter when they can (like in Kanwal et al. 2017), and (perhaps) for the listener to sometimes decide not to do repair. But in our simplified version of the Kirby et al. (2015) model, each learner only infers a single language, which makes it hard to work out how the speaker could choose to use a different signal. I guess there are two ways to implement this minimal effort pressure on the side of the speaker:\n",
-    "- **Language selection**: Fully replicate the Kirby et al. (2015) model, including learners inferring a probability distribution over all possible languages, instead of a single language. In each interaction round, the speaker can then pick a language from their hypothesis (where the hypothesis is a probability distribution over languages) not by sampling from that hypothesis, but instead by first somehow multiplying the hypothesis with the inverse of the total utterance length for each language, such that the speaker doesn't choose the language (and therefore the form they will use to communicate their intended meaning) not only based on the combination of prior+data, but instead on the basis of prior+data+effort\n",
-    "- **Signal selection**: If we don't want to do the full replication of Kirby et al. (2015) (including the Gibbs sampling from the posterior distribution), we could somehow implement a form of reasoning by the speaker that resembles what we think participants do in the Kanwal et al. (2017) model: We assume that a speaker only has one language, but when choosing which form to use to communicate their intended meaning, they first do the RSA-style reasoning, and *subsequently* (probabilistically) decide whether they want to shorten the form. If they have no reason to believe that shortening the form would lead to ambiguity (because the shortened form doesn't overlap with an already existing form in the language), they (probabilistically) decide to use the shortened form. This way of implementing it feels a bit more crude perhaps, but by locating the minimal effort pressure in the likelihood like this (instead of in the inference step), it does perhaps come closer to what we're trying to model: that *given* a particular language, speakers sometimes choose to use a shorter form. This could be parameterised, just like the degree to which speakers try to avoid ambiguity (i.e. by the $\\gamma$ parameter in the Kirby et al., 2017, paper).\n"
+    "1. **Language selection**: Fully replicate the Kirby et al. (2015) model, including learners inferring a probability distribution over all possible languages, instead of a single language. In each interaction round, the speaker can then pick a language from their hypothesis (where the hypothesis is a probability distribution over languages) not by sampling from that hypothesis, but instead by first somehow multiplying the hypothesis with the inverse of the total utterance length for each language, such that the speaker doesn't choose the language (and therefore the form they will use to communicate their intended meaning) not only based on the combination of prior+data, but instead on the basis of prior+data+effort\n",
+    "2. **Signal selection**: If we don't want to do the full replication of Kirby et al. (2015) (including the Gibbs sampling from the posterior distribution), we could somehow implement a form of reasoning by the speaker that resembles what we think participants do in the Kanwal et al. (2017) model: We assume that a speaker only has one language, but when choosing which form to use to communicate their intended meaning, they first do the RSA-style reasoning, and *subsequently* (probabilistically) decide whether they want to shorten the form. If they have no reason to believe that shortening the form would lead to ambiguity (because the shortened form doesn't overlap with an already existing form in the language), they (probabilistically) decide to use the shortened form. This way of implementing it feels a bit more crude perhaps, but by locating the minimal effort pressure in the likelihood like this (instead of in the inference step), it does perhaps come closer to what we're trying to model: that *given* a particular language, speakers sometimes choose to use a shorter form. This could be parameterised, just like the degree to which speakers try to avoid ambiguity (i.e. by the $\\gamma$ parameter in the Kirby et al., 2017, paper)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Let's have a look at how to implement option 2 above:\n",
+    "\n",
+    "#### Production in the Kirby et al. (2015) model:\n",
+    "\n",
+    "$$\n",
+    "P(f \\mid l, t) \\propto \\Bigg\\{\n",
+    "\\begin{array}{ll}\n",
+    "(\\frac{1}{a})^\\gamma \\, (1-\\epsilon) \\; \\; \\textrm{if} \\; t \\; \\textrm{is mapped to} \\; f \\; \\textrm{in} \\; l\\\\ \n",
+    "\\frac{\\epsilon}{|F|-1} \\quad \\quad \\quad \\textrm{if} \\; t \\; \\textrm{is not mapped to} \\; f \\; \\textrm{in} \\; l\n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
+    "where $f$ stands for form (in the sense of a complete signal, such as *aa*), $l$ stands for language, $t$ stands for topic, $a$ stands for ambiguity (i.e. the number of meanings in $M$ that map to form $f$ in $l$), $\\gamma$ specifies the extent to which ambiguous utterances are penalised, and $\\epsilon$ stands for production error.\n",
+    "\n",
+    "\n",
+    "From Kirby et al. (2015, pp. 92-93):\n",
+    "> \"If $a$ = 1 ($f$ is unambiguous) and/or $\\gamma$ = 0 then this yields a model of production where the 'correct' form is produced with probability $1-\\epsilon$. However, when $\\gamma$ > 0 and $f$ is ambiguous (i.e., $a$ > 1), then the 'correct' mapping from $t$ to $f$ is less likely to be produced (the probability $P(f \\mid l, t)$ is reduced by the factor $(\\frac{1}{a})^\\gamma$ ) and the remaining probability mass is spread equally over the other possible forms, leading to increased probability of producing $f'$ $\\neq$ $f$. Therefore, $\\gamma$ > 0 introduces a penalty for languages whose utterances are ambiguous.\""
    ]
   },
   {
