--- a/repair_vs_redundancy.ipynb
+++ b/repair_vs_redundancy.ipynb
@@ -938,7 +938,49 @@
     "\n",
     "\n",
     "From Kirby et al. (2015, pp. 92-93):\n",
-    "> \"If $a$ = 1 ($f$ is unambiguous) and/or $\\gamma$ = 0 then this yields a model of production where the 'correct' form is produced with probability $1-\\epsilon$. However, when $\\gamma$ > 0 and $f$ is ambiguous (i.e., $a$ > 1), then the 'correct' mapping from $t$ to $f$ is less likely to be produced (the probability $P(f \\mid l, t)$ is reduced by the factor $(\\frac{1}{a})^\\gamma$ ) and the remaining probability mass is spread equally over the other possible forms, leading to increased probability of producing $f'$ $\\neq$ $f$. Therefore, $\\gamma$ > 0 introduces a penalty for languages whose utterances are ambiguous.\""
+    "> \"If $a$ = 1 ($f$ is unambiguous) and/or $\\gamma$ = 0 then this yields a model of production where the 'correct' form is produced with probability $1-\\epsilon$. However, when $\\gamma$ > 0 and $f$ is ambiguous (i.e., $a$ > 1), then the 'correct' mapping from $t$ to $f$ is less likely to be produced (the probability $P(f \\mid l, t)$ is reduced by the factor $(\\frac{1}{a})^\\gamma$ ) and the remaining probability mass is spread equally over the other possible forms, leading to increased probability of producing $f'$ $\\neq$ $f$. Therefore, $\\gamma$ > 0 introduces a penalty for languages whose utterances are ambiguous.\"\n",
+    "\n",
+    "\n",
+    "#### Production with environmental noise:\n",
+    "\n",
+    "$$\n",
+    "P(f \\mid l, t) \\propto \\Bigg\\{\n",
+    "\\begin{array}{ll}\n",
+    "(\\frac{1}{a})^\\gamma \\, (1-\\epsilon) \\, (1-n) \\; \\; \\textrm{if} \\; f \\; \\textrm{is mapped to} \\; t \\; \\textrm{in} \\; l \\; \\textrm{and} \\; f \\; \\textrm{is intact} \\\\ \n",
+    "(\\frac{1}{a})^\\gamma \\, (1-\\epsilon) \\, \\frac{n}{|F_{noisy}|} \\quad \\quad \\; \\; \\textrm{if part of} \\; f \\; \\textrm{is mapped to} \\; t \\; \\textrm{in} \\; l \\; \\textrm{and} \\; f \\; \\textrm{is not intact} \\\\ \n",
+    "\\frac{\\epsilon}{|F|-1} \\, (1-n) \\; \\quad \\quad \\quad \\textrm{if} \\; f \\; \\textrm{is not mapped to} \\; t \\; \\textrm{in} \\; l \\; \\textrm{and} \\; f \\; \\textrm{is intact}\\\\\n",
+    "\\frac{\\epsilon}{|F|-1} \\, \\frac{n}{|F_{noisy}|} \\quad \\quad \\quad \\quad \\quad \\textrm{if no part of} \\; f \\; \\textrm{is mapped to} \\; t \\; \\textrm{in} \\; l \\; \\textrm{and} \\; f \\; \\textrm{is not intact}\\\\\n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
+    "where *n* stands for the probability of noise.\n",
+    "\n",
+    "<span class=\"burk\">Actually, the probability for when f is _not_ mapped to t, _and_ f is a noisy variant, is not quite as simple as stated above.</span> Depending on how many forms f there are that _don't_ map to t, some of those error forms will generate the same noisy variant. For example, if the form that _is_ mapped to the intended topic is 'aa', and the forms ['ab', 'ba', 'bb'] form the set of forms that _aren't_ mapped to t, some noisy variants will only occur given one of these error forms being what the speaker produced ('a_' in this case), while others will occur given multiple possible error forms that the speaker might produce (e.g. '\\_b' can be a noisy variant of either 'ab' or 'bb'). The probabilities for the different noisy variants should reflect this. (I.e. in the example above, noisy variant '\\_b' should be twice as probable as noisy variant 'a_'.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How to add minimal effort pressure:\n",
+    "\n",
+    "The good thing about the likelihood function above, is that it considers **all** possible forms; not only the ones that are actually in the language. So the speaker may end up producing a form that is not quite the same as the form that is mapped to their intended meaning either (i) as a result of noise, where they produce only a noisy variant of the form that's mapped to their intended referent, or (ii) as a result of a production error, mediated by the ambiguity of the form (i.e. making an 'error' becomes more likely the more ambiguous the form that's associated with the intended meaning is). What we'd want to add is that in addition to the form that's mapped to the intended meaning and its noisy variants, the production function also assigns a separate probability to the *shorter* variants of the form that's mapped to the intended meaning, and that that probability is governed by a minimal effort parameter (similarly to the ambiguity avoidance parameter $\\gamma$. However, the ambiguity of the shorter form should then be considered subsequently, because it may be that the shorter form is already part of the language. \n",
+    "\n",
+    "Maybe just something along these lines:\n",
+    "\n",
+    "#### Production with environmental noise and minimal effort pressure:\n",
+    "\n",
+    "$$\n",
+    "P(f \\mid l, t) \\propto \\Bigg\\{\n",
+    "\\begin{array}{ll}\n",
+    "(\\frac{1}{a})^\\gamma \\, (\\frac{1}{\\ell})^\\delta \\, (1-\\epsilon) \\, (1-n) \\; \\; \\textrm{if} \\; f \\; \\textrm{is mapped to} \\; t \\; \\textrm{in} \\; l \\; \\textrm{and} \\; f \\; \\textrm{is intact} \\\\ \n",
+    "(\\frac{1}{a})^\\gamma \\, (\\frac{1}{\\ell})^\\delta \\, (1-\\epsilon) \\, \\frac{n}{|F_{noisy}|} \\quad \\quad \\; \\; \\textrm{if part of} \\; f \\; \\textrm{is mapped to} \\; t \\; \\textrm{in} \\; l \\; \\textrm{and} \\; f \\; \\textrm{is not intact} \\\\ \n",
+    "\\frac{\\epsilon}{|F|-1} \\, (1-n) \\; \\quad \\quad \\quad \\textrm{if} \\; f \\; \\textrm{is not mapped to} \\; t \\; \\textrm{in} \\; l \\; \\textrm{and} \\; f \\; \\textrm{is intact}\\\\\n",
+    "\\frac{\\epsilon}{|F|-1} \\, \\frac{n}{|F_{noisy}|} \\quad \\quad \\quad \\quad \\quad \\textrm{if no part of} \\; f \\; \\textrm{is mapped to} \\; t \\; \\textrm{in} \\; l \\; \\textrm{and} \\; f \\; \\textrm{is not intact}\\\\\n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
+    "where $\\ell$ stands for the length of the form, and $\\delta$ is the parameter that governs the strength of the minimal effort pressure. But this feels too simplistic. Intuitively, what speakers would be doing is considering only a shorter version of the form that is actually mapped to their intended meaning in their lexicon, as long as that doesn't cause any ambiguity; instead of just using *any* other form."
    ]
   },
   {
