--- a/repair_vs_redundancy.ipynb
+++ b/repair_vs_redundancy.ipynb
@@ -953,9 +953,7 @@
     "\\end{array}\n",
     "$$\n",
     "\n",
-    "where *n* stands for the probability of noise.\n",
-    "\n",
-    "<span class=\"burk\">Actually, the probability for when f is _not_ mapped to t, _and_ f is a noisy variant, is not quite as simple as stated above.</span> Depending on how many forms f there are that _don't_ map to t, some of those error forms will generate the same noisy variant. For example, if the form that _is_ mapped to the intended topic is 'aa', and the forms ['ab', 'ba', 'bb'] form the set of forms that _aren't_ mapped to t, some noisy variants will only occur given one of these error forms being what the speaker produced ('a_' in this case), while others will occur given multiple possible error forms that the speaker might produce (e.g. '\\_b' can be a noisy variant of either 'ab' or 'bb'). The probabilities for the different noisy variants should reflect this. (I.e. in the example above, noisy variant '\\_b' should be twice as probable as noisy variant 'a_'.)"
+    "where *n* stands for the probability of noise."
    ]
   },
   {
@@ -964,7 +962,7 @@
    "source": [
     "### How to add minimal effort pressure:\n",
     "\n",
-    "The good thing about the likelihood function above, is that it considers **all** possible forms; not only the ones that are actually in the language. So the speaker may end up producing a form that is not quite the same as the form that is mapped to their intended meaning either (i) as a result of noise, where they produce only a noisy variant of the form that's mapped to their intended referent, or (ii) as a result of a production error, mediated by the ambiguity of the form (i.e. making an 'error' becomes more likely the more ambiguous the form that's associated with the intended meaning is). What we'd want to add is that in addition to the form that's mapped to the intended meaning and its noisy variants, the production function also assigns a separate probability to the *shorter* variants of the form that's mapped to the intended meaning, and that that probability is governed by a minimal effort parameter (similarly to the ambiguity avoidance parameter $\\gamma$. However, the ambiguity of the shorter form should then be considered subsequently, because it may be that the shorter form is already part of the language. \n",
+    "The good thing about the likelihood function above, is that it considers **all** possible forms; not only the ones that are actually in the language. So the speaker may end up producing a form that is not quite the same as the form that is mapped to their intended meaning either (i) as a result of noise, where they produce only a noisy variant of the form that's mapped to their intended referent, or (ii) as a result of a production error, mediated by the ambiguity of the form (i.e. making an 'error' becomes more likely the more ambiguous the form that's associated with the intended meaning is). What we'd want to add is that in addition to the form that's mapped to the intended meaning (and its noisy variants), the production function also assigns a separate probability to the *shorter* variants of the form that's mapped to the intended meaning, and that that probability is governed by a minimal effort parameter (similarly to the ambiguity avoidance parameter $\\gamma$. However, the ambiguity of the shorter form should then be considered subsequently, because it may be that the shorter form is already part of the language. \n",
     "\n",
     "Maybe just something along these lines:\n",
     "\n",
