added thoughts on when to initiate repair

--- a/repair_vs_redundancy.ipynb
+++ b/repair_vs_redundancy.ipynb
@@ -960,11 +960,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### How to add minimal effort pressure:\n",
+    "### How to add minimal effort pressure to production function:\n",
     "\n",
-    "The good thing about the likelihood function above, is that it considers **all** possible forms; not only the ones that are actually in the language. So the speaker may end up producing a form that is not quite the same as the form that is mapped to their intended meaning either (i) as a result of noise, where they produce only a noisy variant of the form that's mapped to their intended referent, or (ii) as a result of a production error, mediated by the ambiguity of the form (i.e. making an 'error' becomes more likely the more ambiguous the form that's associated with the intended meaning is). What we'd want to add is that in addition to the form that's mapped to the intended meaning (and its noisy variants), the production function also assigns a separate probability to the *shorter* variants of the form that's mapped to the intended meaning, and that that probability is governed by a minimal effort parameter (similarly to the ambiguity avoidance parameter $\\gamma$. However, the ambiguity of the shorter form should then be considered subsequently, because it may be that the shorter form is already part of the language. \n",
+    "The good thing about the likelihood function above, is that it considers **all** possible forms; not only the ones that are actually in the language. So the speaker may end up producing a form that is not quite the same as the form that is mapped to their intended meaning either (i) as a result of noise, where they produce only a noisy variant of the form that's mapped to their intended referent, or (ii) as a result of a production error, mediated by the ambiguity of the form (i.e. making an 'error' becomes more likely the more ambiguous the form that's associated with the intended meaning is). What we'd want to add is that in addition to the form that's mapped to the intended meaning (and its noisy variants), the production function also makes the probability of producing the form that is mapped to the intended meaning depend on the *length* of the form, in a way that is governed by a minimal effort parameter (similarly to the ambiguity avoidance parameter $\\gamma$). \n",
     "\n",
-    "Maybe just something along these lines:\n",
+    "<span class=\"burk\">That's probably the simplest way of implementing a minimal effort pressure, and it would look like this:</span>\n",
     "\n",
     "#### Production with environmental noise and minimal effort pressure:\n",
     "\n",
@@ -978,7 +978,24 @@
     "\\end{array}\n",
     "$$\n",
     "\n",
-    "where $\\ell$ stands for the length of the form, and $\\delta$ is the parameter that governs the strength of the minimal effort pressure. But this feels too simplistic. Intuitively, what speakers would be doing is considering only a shorter version of the form that is actually mapped to their intended meaning in their lexicon, as long as that doesn't cause any ambiguity; instead of just using *any* other form."
+    "where $\\ell$ stands for the length of the form, and $\\delta$ is the parameter that governs the strength of the minimal effort pressure. \n",
+    "\n",
+    "\n",
+    "Another option would be for the speaker to specifically consider shorter versions of the form that maps to the intended meaning, depending on whether that would cause extra ambiguity or not (because it may be that that shorter form is already used for another meaning in the language). That would make the production function a bit more complex, but maybe it makes more sense intuitively? That the speaker is basically considering using a clipping, as in the Kanwal et al. (2017) experiment, rather than just using *any* other form because it's shorter? However, the idea of clippings doesn't really make sense in a compositional system that uses either (i) reduplication of the segments or (ii) substrings of length 2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reception\n",
+    "\n",
+    "<span class=\"burk\">When should the listener initiate repair?</span> There are a couple of options here:\n",
+    "\n",
+    "1. Deterministically whenever there is ambiguity (so even if there was no noise in the form, but the listener's language just makes the form difficult to interpret)\n",
+    "2. Deterministically whenever there is ambiguity *due to noise* (so only if there was actually noise obscuring the signal). \n",
+    "3. Probabilistically depending on the level of ambiguity (regardless of whether noise was present\n",
+    "4. Probabilistically depending on the level of ambiguity, but *only* if noise was present.\n"
    ]
   },
   {
