added thoughts on reception

--- a/repair_vs_redundancy.ipynb
+++ b/repair_vs_redundancy.ipynb
@@ -995,7 +995,9 @@
     "1. Deterministically whenever there is ambiguity (so even if there was no noise in the form, but the listener's language just makes the form difficult to interpret)\n",
     "2. Deterministically whenever there is ambiguity *due to noise* (so only if there was actually noise obscuring the signal). \n",
     "3. Probabilistically depending on the level of ambiguity (regardless of whether noise was present\n",
-    "4. Probabilistically depending on the level of ambiguity, but *only* if noise was present.\n"
+    "4. Probabilistically depending on the level of ambiguity, but *only* if noise was present.\n",
+    "\n",
+    "<span class=\"mark\">Note:</span> no matter which of these options we choose, we are assuming that the listener knows the *length of the signal* and the *location of the noise* (i.e. which part of the signal was obscured)."
    ]
   },
   {
