added thoughts on when to initiate repair

--- a/repair_vs_redundancy.ipynb
+++ b/repair_vs_redundancy.ipynb
@@ -997,6 +997,8 @@
     "3. Probabilistically depending on the level of ambiguity (regardless of whether noise was present\n",
     "4. Probabilistically depending on the level of ambiguity, but *only* if noise was present.\n",
     "\n",
+    "A probabilistic model (i.e. depending on the level of ambiguity) might be more realistic, but it would add a bit of extra complexity to the model, so let's start with a deterministic version. Option 1 might make most sense, because the listener should mainly be driven by ambiguity (i.e. how certain they are about their interpretation of the signal) when determining whether to initiate repair or not. And indeed there is a chance that the listener will get a less ambiguous signal the second time around, because the speaker does (probabilistically) try to avoid ambiguity when choosing their signal.\n",
+    "\n",
     "<span class=\"mark\">Note:</span> no matter which of these options we choose, we are assuming that the listener knows the *length of the signal* and the *location of the noise* (i.e. which part of the signal was obscured)."
    ]
   },
